Closed Bug 1903974 Opened 2 years ago Closed 1 year ago

spurious additional gaps in content-exposed buffered ranges after samples are removed

Categories

(Core :: Audio/Video: Playback, defect)

defect

Tracking

()

RESOLVED FIXED
129 Branch
Tracking Status
firefox-esr115 --- wontfix
firefox-esr128 --- wontfix
firefox127 --- wontfix
firefox128 --- wontfix
firefox129 --- fixed

People

(Reporter: karlt, Assigned: karlt)

References

(Blocks 1 open bug, Regressed 1 open bug, Regression)

Details

(Keywords: regression)

Attachments

(1 file)

Bug 1878510 comment 79 saw lots of small gaps showing up in the buffered range after RemoveFrames recalculates the whole buffered range using the maximum removed frame duration for fuzz.
Sometimes the removed duration was zero and so there was no fuzz at all.
maxSampleDuration was intended to apply only as fuzz to removed frames.
This is different from insertion which uses the longest frame duration since the key frame.

RemoveFrames() can instead reduce mSanitizedBufferedRanges by the change in mBufferedRanges:
https://treeherder.mozilla.org/jobs?repo=try&revision=dc18cabced2e96254e3b52891f3ea1faa417ceeb

The previous recalculation of mSanitizedBufferedRanges with a different fuzz
would introduce additional spurious gaps in the buffered ranges if the
durations of the removed frames were small.

Attachment #9408830 - Attachment description: Bug 1903974 Subtract only gap from buffered ranges after frame removal r?#media-playback-reviewers → Bug 1903974 Subtract only gap from mSanitizedBufferedRanges after frame removal r?#media-playback-reviewers
Keywords: regression
Regressed by: 1220033
Attachment #9408830 - Attachment description: Bug 1903974 Subtract only gap from mSanitizedBufferedRanges after frame removal r?#media-playback-reviewers → Bug 1903974 On frame removal, subtract only new gaps from mSanitizedBufferedRanges r?#media-playback-reviewers

Set release status flags based on info from the regressing bug 1220033

:karlt Fx128 is in the last week of beta, this is an older issue going by the regressor.
Do you plan on landing this soon?
Wondering if it should ride the train with Fx129 and then wonfix it for Fx128, or should it be considered for Fx128 uplift.
Asking since it has an S2 severity, what do you think?

Flags: needinfo?(karlt)

I think we should wontfix for Fx128, thanks.

I expect that the effects of this bug are rare now that we have the fixes that landed for bug 1878510 and bug 1900191 (due to their removal of zero frame duration situations). We can drop the severity now for those reasons too.

There is some complexity in the code change here, and I don't know of a remaining urgent need to require uplift.

Severity: S2 → S3
Flags: needinfo?(karlt)
Pushed by ktomlinson@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/53b744845abd On frame removal, subtract only new gaps from mSanitizedBufferedRanges r=media-playback-reviewers,alwu
Status: ASSIGNED → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED
Target Milestone: --- → 129 Branch
Blocks: yt-playback
Regressions: 1914844
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: